{
    "name": "WeaponAction",
    "maps": [
        {
            "name": "Weapon",
            "id": "70fa6e0f-ab1a-4049-8585-ff809431a713",
            "actions": [
                {
                    "name": "Add0",
                    "type": "Button",
                    "id": "d829562e-c6f8-48b0-9c93-7bca91507d07",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Add1",
                    "type": "Button",
                    "id": "0fa90362-c771-41cb-ba7b-0e3816340576",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Add2",
                    "type": "Button",
                    "id": "74ced5d1-64a8-43fe-a014-817098b63f9e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Add3",
                    "type": "Button",
                    "id": "9f2f44d4-e82a-47c2-9ff1-cfc2066793e8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Add4",
                    "type": "Button",
                    "id": "690ab6ef-2db5-4d52-9dd9-cbb9d51944a2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Add5",
                    "type": "Button",
                    "id": "679817c0-110c-4c68-8478-aaef0a137e8f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "22fed515-e3b5-4a63-bf78-1765698673ae",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Add0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41a816a8-8b01-45bf-8224-2e67b6772e43",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Add1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e48f6f3-6871-4a73-81cc-7bc381d02b6f",
                    "path": "<Keyboard>/u",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Add2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c90cad4f-f7d8-494d-95c0-e6399a14d1a3",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Add3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd6f6c89-dc76-4e7d-9467-b006a0b23941",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Add4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b1ba8c7-1165-4077-a64d-e86e37cf2187",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Add5",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}